--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://meubilhete.com/devfestcentrooeste" />
+<meta http-equiv="refresh" content="0; url=http://www.devfestcentrooeste.com.br/" />
